--- a/src/features/workspace/z.module.css
+++ b/src/features/workspace/z.module.css
@@ -45,11 +45,11 @@
 
 .leaderBoard_container {
   display: grid;
-  padding: 10px 60px 10px 16px;
+  padding:0  ;
   grid-template-columns: 4fr 1fr;
   grid-template-rows: 80px 1fr;
-  height: calc(100vh - 64px);
-  grid-gap: 5px;
+  height: calc(100vh - 33px);
+  grid-gap: 0;
   grid-template-areas:
     'toolbox toolbox'
     'leaderboard userProfile';
@@ -62,7 +62,7 @@
 .leaderBoard_toolbox {
   grid-area: toolbox;
   background-color: #1a1f25;
-  border-radius: 16px;
+  border-radius: 0;
   padding: 24px;
   display: flex;
   flex-direction: column;
@@ -76,7 +76,7 @@
 .leaderBoard_userProfile {
   grid-area: userProfile;
   background-color: #0e1217;
-  border-radius: 16px;
+  border-radius: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -90,7 +90,7 @@
 } */
 
 .user_profile_inside_container {
-  height: 786px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -103,7 +103,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 16px;
+  border-radius: 0;
   background-image: url('./../assets/taskbaravatar.png');
   background-position: center;
   box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
@@ -114,7 +114,7 @@
 .ContentLeaderBoard_table_container {
   grid-area: leaderboard;
   background-color: #1a1f25;
-  border-radius: 16px;
+  border-radius: 0;
   overflow-x: hidden;
   overflow-y: auto;
   background-image: url('./../assets/vector_lines.svg');
@@ -129,8 +129,8 @@
   height: 67%;
   display: grid;
   grid-template-columns: 70px 1fr;
-  padding: 5px 0;
-  grid-gap: 5px;
+  padding: 0;
+  grid-gap: 0;
 }
 
 .social_media_container {
@@ -140,10 +140,10 @@
 }
 
 .social_controller_container {
-  height: 40%;
+  height: 41%;
   border: 1px solid #2d323b;
   background-color: #1a1f25;
-  border-radius: 12px;
+  border-radius: 0;
   background-image: url('./../assets/vector_lines.svg');
   box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
     rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
@@ -171,7 +171,8 @@
 
 .social_media_icon_container {
   height: calc(100% - (40% + 5px));
-  border-radius: 12px;
+  border-radius: none !important;
+  border-bottom-left-radius:none ;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -190,7 +191,7 @@
   align-items: center;
   border: 1px solid #2d323b;
   background-color: #1a1f25;
-  border-radius: 12px;
+  border-radius: 0;
   background-image: url('./../assets/vector_lines.svg');
   box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
     rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
@@ -292,16 +293,16 @@
 .random_code_container_board {
   display: grid;
   width: 100%;
-  height: calc(100vh - 64px);
-  padding: 10px 60px 10px 16px;
+  height: calc(100vh - 33px);
+ 
   grid-template-columns: 400px 1fr;
   grid-template-rows: 1fr;
-  grid-column-gap: 10px;
+  grid-column-gap: 0;
 }
 
 .random_code_container_board > div {
-  padding: 10px;
-  overflow: hidden;
+ 
+   overflow: hidden;
 }
 
 .menu_exp_container {
@@ -310,15 +311,15 @@
   border: 1px solid #383d47;
   align-items: center;
   padding: 10px 18px;
-  border-radius: 12px;
+  border-radius: 0;
   background-color: #23282e;
-  margin-bottom: 11px;
+  /* margin-bottom: 11px; */
 }
 
 .random_code_container_board_selection,
 .accordion_container {
   padding: 20px 18px;
-  border-radius: 12px;
+  /* border-radius: 12px; */
   box-shadow: inset 0 -4px 0px #383d47;
   margin-bottom: 10px;
 }
@@ -343,27 +344,26 @@
 }
 
 .random_code_container_board_code {
-  height: calc(100% - 64px - 10px);
+  height: calc(100% - 64px );
   align-items: center;
-  padding: 10px 0;
-  border-radius: 12px;
+  border-radius: 0;
   display: grid;
   grid-template-columns: 1fr 1.3fr;
   grid-template-rows: 1fr;
-  grid-column-gap: 10px;
+  grid-column-gap: 0;
   background-color: #1c1f26;
 }
 
 .random_code_container_board_code > div {
   border-radius: 12px;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 78px);
 }
 
 .random_code_container_board > div:first-child {
   border: 1px solid #383d47;
   background-color: #1c1f26;
-  border-radius: 12px;
+  border-radius: 0;
 }
 
 .code_snippets_container {
@@ -381,7 +381,7 @@
   padding: 30px 0;
   width: 100%;
   text-align: center;
-  border-radius: 8px;
+ 
   box-shadow: inset 0 -15px 0 #0e1217;
   border: 2px outset rgba(255, 255, 0, 0.113);
   text-transform: uppercase;
@@ -394,13 +394,13 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-template-areas: 'toolup output' 'toolbottom output';
-  grid-gap: 5px;
+ 
 }
 
 .ui_output_output_tools > div {
   background-color: #1c1f26;
   border: 1px solid #383d47;
-  border-radius: 12px;
+ 
 
   overflow: hidden;
 }
